--- a/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
+++ b/frontend/src/app/routes/dashboard-historico/dashboard-historico.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-screen">
+<div class="flex h-screen px-4">
 
   <div class="flex-1 p-4 flex flex-col">
     <div class="p-2 border-b border-color: rgb(248 250 252);; px-6">
