--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -1,9 +1,9 @@
 <div class="flex full-screen">
-  <div class="p-4">
+  <div class="py-6 px-10">
     <!-- Título de la Sección -->
-    <h2 class="text-xl font-bold mb-6 text-center">Guías y Tutoriales</h2>
+    <h2 class="text-xl font-bold mb-6">Guías y Tutoriales</h2>
     <!-- Panel de Archivos -->
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
+    <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-4 justify-between">
       <div class="bg-white p-4 rounded shadow">
         <img src="assets/img/lytics_logo_Grilla.png" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
         <p>Lytics.pdf</p>
@@ -43,28 +43,28 @@
 </div>
 
 <!-- Bloque de Video -->
-      <div class="mt-8 p-6 bg-teal-100 rounded-lg shadow-md flex flex-col md:flex-row items-center space-x-0 md:space-x-8">
-        <div class="flex-1 mb-4 md:mb-0">
-          <h3 class="text-2xl font-semibold mb-2">Domótica: aprender a crear tu casa inteligente</h3>
-          <p class="text-gray-800 mb-4">
-            La domótica transforma tu hogar en un espacio más eficiente y seguro. Con sistemas inteligentes, puedes:
-          </p>
-          <ul class="list-disc ml-5 text-gray-800 mb-4">
-            <li>Controlar y automatizar la iluminación, optimizando el consumo energético.</li>
-            <li>Gestionar la climatización de manera eficiente, manteniendo un ambiente confortable.</li>
-            <li>Integrar sistemas de seguridad que te permiten monitorear tu hogar desde cualquier lugar.</li>
-            <li>Automatizar electrodomésticos para reducir el consumo innecesario de energía.</li>
-            <li>Recibir notificaciones en tiempo real sobre el estado de tu hogar.</li>
-          </ul>
-          <!-- Uncomment the button if needed -->
-          <!-- <a href="#consejos" class="mt-4 bg-teal-500 text-white py-2 px-4 rounded inline-block">Consejos</a> -->
-        </div>
-        <div class="flex-shrink-0">
-          <iframe width="100%" height="250" src="https://www.youtube.com/embed/ArTVr74nwXo" title="Video de Domótica" class="rounded-lg" allowfullscreen></iframe>
+<div class="mt-8 py-6 px-10 bg-teal-100 rounded-lg shadow-md flex flex-col md:flex-row items-center space-x-8 mx-6">
+  <div class="flex-1 mb-4 md:mb-0">
+    <h3 class="text-2xl font-semibold mb-2">Domótica: aprender a crear tu casa inteligente</h3>
+    <p class="text-gray-800 mb-4">
+      La domótica transforma tu hogar en un espacio más eficiente y seguro. Con sistemas inteligentes, puedes:
+    </p>
+    <ul class="list-disc ml-5 text-gray-800 mb-4">
+      <li>Controlar y automatizar la iluminación, optimizando el consumo energético.</li>
+      <li>Gestionar la climatización de manera eficiente, manteniendo un ambiente confortable.</li>
+      <li>Integrar sistemas de seguridad que te permiten monitorear tu hogar desde cualquier lugar.</li>
+      <li>Automatizar electrodomésticos para reducir el consumo innecesario de energía.</li>
+      <li>Recibir notificaciones en tiempo real sobre el estado de tu hogar.</li>
+    </ul>
+    <!-- Uncomment the button if needed -->
+    <!-- <a href="#consejos" class="mt-4 bg-teal-500 text-white py-2 px-4 rounded inline-block">Consejos</a> -->
+  </div>
+  <div class="flex-shrink-0">
+    <iframe width="100%" height="250" src="https://www.youtube.com/embed/ArTVr74nwXo" title="Video de Domótica" class="rounded-lg" allowfullscreen></iframe>
 
-        </div>
-      </div>
-      <div class="bg-white p-6 rounded-lg shadow-lg">
+  </div>
+</div>
+<div class="bg-white py-6 px-10 rounded-lg shadow-lg mx-6">
  <h2 class="text-2xl font-bold mb-4 text-center">Cómo hacer tu casa más eficiente</h2>
 
   <!-- Contenedor para las imágenes -->
@@ -76,7 +76,7 @@
     </div>
   </div>
     <!-- Nuestros Servicios -->
-    <section  class="bg-gray-50 py-10">
+    <section  class="bg-gray-50 py-10 mx-10">
       <div class="container mx-auto px-6 lg:px-8 text-center flex flex-col items-center justify-center">
         <h2 class="text-3xl font-extrabold text-black mb-8">Consejos</h2>
         <h5 class="font-bold text-primary mb-8">Aquí van tus consejos...</h5>
