--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -1,5 +1,5 @@
  <!-- Sidebar / Sidenav -->
- <aside class="w-64 bg-base-200 h-full shadow-md flex flex-col justify-between">
+ <aside class="w-64 bg-base-100 h-full shadow-md flex flex-col justify-between">
   <!-- Contenedor superior -->
   <div >
     <div class="p-4">
@@ -22,7 +22,7 @@
 
   <!-- Contenedor inferior -->
   <div>
-    <ul class="menu menu-sm bg-base-100 rounded-box z-[1] p-2 shadow">
+    <ul class="menu menu-sm  rounded-box z-[1] p-2 shadow">
       <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Mi suscripción</a></li>
       <li class="p-1"><a href="configuracion" class="block p-2 rounded hover:bg-gray-300 transition">Configuraciones</a></li>
       <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Desloguearse</a></li>
