--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container mx-auto py-4">
-  <div class="grid grid-cols-5 gap-4">
+  <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-10">
     <app-card-info></app-card-info>
     <app-card-info></app-card-info>
     <app-card-info></app-card-info>
@@ -7,7 +7,7 @@
   </div>
 </div>
 
-<div class="grid grid-cols-1 md:grid-cols-2 gap-6 p-6">
+<div class="grid grid-cols-1 md:grid-cols-2 gap-6 py-6 px-10">
   <!-- Consumo (Voltaje) -->
   <div [ngClass]="{'h-screen w-screen fixed top-0 left-0 z-50': isExpanded1, 'relative': !isExpanded1 }" class="bg-white p-6 rounded-lg shadow-md">
     <div class="flex justify-between items-center">
