--- a/frontend/src/app/routes/huella-carbono/huella-carbono.component.html
+++ b/frontend/src/app/routes/huella-carbono/huella-carbono.component.html
@@ -1,13 +1,13 @@
     <!-- Primera fila: Información general -->
-    <div class="container mx-auto py-4">
+    <div class="container mx-auto py-4 px-10">
       <div class="grid grid-cols-1 gap-4">
         <h2 class="text-2xl font-bold">Huella de carbono</h2>
         <p class="text-pretty">Este panel te ofrece una proyección estimada basada en tu ritmo actual de consumo, permitiéndote anticipar el gasto al finalizar el mes.</p>
       </div>
     </div>
     <!-- Segunda fila: Tarjetas -->
-    <div class="container mx-auto py-4">
-      <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
+    <div class="container mx-auto px-10 py-4">
+      <div class="grid grid-cols-2 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4">
         <app-card-info></app-card-info>
         <app-card-info></app-card-info>
         <app-card-info></app-card-info>
@@ -16,8 +16,8 @@
       </div>
     </div>
     <!-- Tercera fila: Cards detalladas -->
-    <section class="flex-1 text-gray-600 body-font">
-      <div class="container px-6 py-16 mx-auto">
+    <section class="flex-1 text-gray-600 body-font px-10">
+      <div class="container py-8 mx-auto">
         <div class="grid grid-cols-4 gap-4">
           <!-- Card 1 -->
           <div class="bg-gray-100 p-6 rounded-lg">
