--- a/frontend/src/app/routes/reportes/reportes.component.html
+++ b/frontend/src/app/routes/reportes/reportes.component.html
@@ -40,7 +40,7 @@
 
 
 
-<div class="flex items-start justify-between p-4">
+<div class="flex items-start justify-between py-6 px-10">
   <div class="flex w-full">
     <div>
       <h2 class="text-xl font-bold mb-2">Selecciona el rango de fechas</h2>
