se agregaron el complemeto de alertas

--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -12,6 +12,7 @@
         <li class="p-1"><a [routerLink]="['/home/huella']" class="block p-2 rounded hover:bg-gray-300 transition">Huella de carbono</a></li>
         <li class="p-1"><a [routerLink]="['/home/historico']" class="block p-2 rounded hover:bg-gray-300 transition">Históricos</a></li>
         <li class="p-1"><a [routerLink]="['/home/reportes']" class="block p-2 rounded hover:bg-gray-300 transition">Reportes</a></li>
+        <li class="p-1"><a [routerLink]="['/home/alerts']" class="block p-2 rounded hover:bg-gray-300 transition">Alertas</a></li>
       </ul>
 
           </div>
