--- a/frontend/src/app/routes/reportes/reportes.component.html
+++ b/frontend/src/app/routes/reportes/reportes.component.html
@@ -1,5 +1,7 @@
+<h2 class="text-2xl mb-4 font-bold leading-tight text-gray-900">Reportes</h2>
+<hr class="my-4">
 <div class="flex justify-center mt-4">
-  <div class="flex space-x-4">
+    <div class="flex space-x-4">
     <button
       (click)="toggleSelection('consumo')"
       [class.bg-blue-500]="isConsumoSelected"
