--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -1,18 +1,22 @@
 <div class="flex h-screen">
-
+  <!-- Sidebar -->
   <app-sidebar
-    class="fixed inset-y-0 transition-all duration-300 bg-gray-200 z-20"
     [isSidebarOpen]="isSidebarOpen"
+    class="fixed inset-y-0 transition-all duration-300 bg-gray-200 z-20"
+    [class.w-16]="!isSidebarOpen || screenWidth < 1024"
+    [class.w-64]="isSidebarOpen && screenWidth >= 1024"
   ></app-sidebar>
 
-  <div class="flex-1 flex flex-col transition-width duration-1500"
-       [ngClass]="{'pl-16': !isSidebarOpen, 'pl-64': isSidebarOpen}">
-
+  <!-- Contenido principal -->
+  <div class="flex-1 flex flex-col transition-all duration-300"
+       [ngClass]="{
+         'pl-16': !isSidebarOpen || screenWidth < 1024,
+         'pl-64': isSidebarOpen && screenWidth >= 1024
+       }">
     <app-toolbar (toggleSidebar)="toggleSidebar()"></app-toolbar>
 
     <main class="flex-grow bg-gray-50 pt-2 transition-all duration-300">
       <router-outlet></router-outlet>
     </main>
   </div>
-
 </div>
