--- a/frontend/src/app/routes/guides/guides.component.html
+++ b/frontend/src/app/routes/guides/guides.component.html
@@ -1,11 +1,13 @@
-<div class="flex full-screen">
-  <div class="py-6 px-10">
-    <!-- Título de la Sección -->
-    <h2 class="text-xl font-bold mb-6">Guías y Tutoriales</h2>
+<div class="py-1 px-3">
+
+  <div class="rounded shadow-lg px-3 mb-2">
+    <h1 class="text-lg font-bold mb-2">Guías y Tutoriales</h1>
+    <p class="text-sm mx-2">Este panel ayuda a aprender todo lo que puedes hacer con tu aplicacion.</p>
+  </div>
     <!-- Panel de Archivos -->
-    <div class="grid sm:grid-cols-2 md:grid-cols-4 gap-4 justify-between">
-      <div class="bg-white p-4 rounded shadow">
-        <img src="assets/img/lytics_logo_Grilla.png" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+    <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3">
+      <div class=" p-2 rounded shadow-lg ">
+        <img src="assets/img/lytics_logo_Grilla.png" alt="Instalaciones Domóticas" class="h-auto w-full object-cover mb-2">
         <p>Lytics.pdf</p>
         <p class="text-sm">289KB</p>
         <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
@@ -13,8 +15,8 @@
         </a>
       </div>
 
-      <div class="bg-white p-4 rounded shadow">
-        <img src="assets/img/Dispositivo.webp" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+      <div class=" p-2 rounded shadow-lg">
+        <img src="assets/img/Dispositivo.webp" alt="Instalaciones Domóticas" class="h-auto w-full object-cover mb-2">
         <p> Dispocitivos instalación.pdf</p>
         <p class="text-sm">383KB</p>
         <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
@@ -22,16 +24,16 @@
         </a>
       </div>
 
-      <div class="bg-white p-4 rounded shadow">
-        <img src="assets/img/veneficios.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+      <div class=" p-2 rounded shadow-lg">
+        <img src="assets/img/veneficios.jpeg" alt="Instalaciones Domóticas" class="h-auto w-full object-cover mb-2">
         <p>Info sobre domóticas.pdf</p>
         <p class="text-sm">129KB</p>
         <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
           Descargar
         </a>
       </div>
-      <div class="bg-white p-4 rounded shadow">
-        <img src="assets/img/domotica.jpeg" alt="Instalaciones Domóticas" class="h-40 w-full object-cover mb-2">
+      <div class=" p-2 rounded shadow-lg">
+        <img src="assets/img/domotica.jpeg" alt="Instalaciones Domóticas" class="h-auto w-full object-cover mb-2">
         <p>software Lytics.pdf</p>
         <p class="text-sm">490KB</p>
         <a href="assets/pdf/Instalaciones_Domoticas.pdf" download class="text-blue-500 hover:text-blue-700">
@@ -40,7 +42,6 @@
       </div>
     </div>
   </div>
-</div>
 
 <!-- Bloque de Video -->
 <div class="mt-8 py-6 px-10 bg-teal-100 rounded-lg shadow-md flex flex-col md:flex-row items-center space-x-8 mx-6">
@@ -76,7 +77,7 @@
     </div>
   </div>
     <!-- Nuestros Servicios -->
-    <section  class="bg-gray-50 py-10 mx-10">
+    <section  class="bg-gray-50 py-3 mx-2">
       <div class="container mx-auto px-6 lg:px-8 text-center flex flex-col items-center justify-center">
         <h2 class="text-3xl font-extrabold text-black mb-8">Consejos</h2>
         <h5 class="font-bold text-primary mb-8">Aquí van tus consejos...</h5>
