--- a/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
+++ b/frontend/src/app/routes/mis-dispositivos/mis-dispositivos.component.html
@@ -1,9 +1,9 @@
-<div class="py-6 px-10">
+<div class="py-1 px-3">
 
-  <div class="">
-    <h1 class="text-xl font-bold mb-4">Mis Dispositivos</h1>
-    <button class="bg-secondary text-white px-4 py-2 rounded mb-4 mr-4" (click)="openCodeModal()">Agregar Lytics</button>
-    <button class="bg-primary text-white px-4 py-2 rounded mb-4 mx-4" (click)="openModal()">Agregar Dispositivo de casa</button>
+  <div class="rounded shadow-lg p-2">
+    <h1 class="text-lg font-bold mb-4">Mis Dispositivos</h1>
+    <button class="bg-secondary text-white px-4 py-2 rounded mb-4 mx-1" (click)="openCodeModal()">Agregar Lytics</button>
+    <button class="bg-primary text-white px-4 py-2 rounded mb-4 mx-1" (click)="openModal()">Agregar Dispositivo de casa</button>
   </div>
 
 
@@ -44,8 +44,8 @@
 </div>
 
 
-<section id="dispo" class="py-10 bg-gray-100">
-  <div class="container mx-auto px-10 text-center">
+<section id="dispo" class="py-4 bg-gray-100">
+  <div class="container mx-auto px-4 text-center">
     <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-8">
 
       <!-- Dispositivo de casa -->
