--- a/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
+++ b/frontend/src/app/routes/carbon-footprint/carbon-footprint/carbon-footprint.component.html
@@ -11,34 +11,38 @@
       <app-card-info
       [iconClasses]="'fa-solid fa-tree'"
       [titleCard]="'Arboles'"
-      [titleCardProgress]="'Kg de CO2'"
-      [actualMonth]="'Mes actual'"
+      [dataCardProgress]="'5 unidades'"
+      [subtitleCard]="'Cantidad a plantar'"
       [valueProgress]="10"
       [maxProgress]="100"
+      [colorProgress]="'progress progress-success w-ful'"
       ></app-card-info>
       <app-card-info
       [iconClasses]="'fa-solid fa-plane'"
       [titleCard]="'Horas de vuelo'"
-      [titleCardProgress]="'km en avion'"
-      [actualMonth]="'Mes actual'"
+      [dataCardProgress]="'500 km'"
+      [subtitleCard]="'km en avion'"
       [valueProgress]="40"
       [maxProgress]="100"
+      [colorProgress]="'progress progress-error w-ful'"
       ></app-card-info>
       <app-card-info
       [iconClasses]="'fa-solid fa-car'"
       [titleCard]="'Autos'"
-      [titleCardProgress]="'Kg de CO2'"
-      [actualMonth]="'Mes actual'"
+      [dataCardProgress]="'200 km'"
+      [subtitleCard]="'Km en auto'"
       [valueProgress]="50"
       [maxProgress]="100"
+      [colorProgress]="'progress progress-info w-ful'"
       ></app-card-info>
       <app-card-info
-      [iconClasses]="'fa-solid fa-car'"
-      [titleCard]="'CO2 emitido'"
-      [titleCardProgress]="'blabla'"
-      [actualMonth]="'Mes actual'"
+      [iconClasses]="'fa-solid fa-heart-crack'"
+      [titleCard]="'Gases contaminantes'"
+      [dataCardProgress]="'20 kg'"
+      [subtitleCard]="'kg en gases'"
       [valueProgress]="50"
       [maxProgress]="100"
+      [colorProgress]="'progress progress-warning w-ful'"
       ></app-card-info>
     </div>
    
