fix bug de esconder sidebar

--- a/frontend/src/app/core/toolbar/toolbar.component.html
+++ b/frontend/src/app/core/toolbar/toolbar.component.html
@@ -1,4 +1,4 @@
-<header class="navbar bg-base-100 shadow-md p-4 flex items-center justify-between">
+<header class="navbar bg-base-100 shadow-lg p-4 flex items-center justify-between">
   <!-- Botón de menú hamburguesa -->
   <div>
     <button (click)="toggleSidebar.emit()" class="btn btn-ghost">
