merger, huella, Alertas, DashHistori, fix sidebar expandir en mobile

--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -46,7 +46,7 @@
         </a>
       </li>
       <li class="p-1">
-        <a [routerLink]="['alertas']" class="block p-2 rounded hover:bg-gray-300 transition" title="Alertas">
+        <a [routerLink]="['alerts']" class="block p-2 rounded hover:bg-gray-300 transition" title="Alertas">
           <i class="inline-block w-5 h-5 p-1 fa-lg fa-solid fa-bell"></i>
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Alertas</span>
         </a>
