--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -4,7 +4,7 @@
 
   <div class="p-8" *ngIf="isSidebarOpen">
     <img src="../../../assets/img/IsoTipoLyticsGrilla.png" alt="Logo de la marca" >
-    <button class="sm:hidden absolute top-1 ml-52 btn btn-circle"
+    <button class="sm:block lg:hidden absolute top-1 ml-52 btn btn-circle"
     (click)="closeCart()"><i class="fa-lg fa-regular fa-circle-xmark"></i></button>
   </div>
   <div class="p-4" *ngIf="!isSidebarOpen">
