--- a/frontend/src/app/routes/reportes/reportes.component.html
+++ b/frontend/src/app/routes/reportes/reportes.component.html
@@ -1,3 +1,50 @@
+<!-- Contenedor padre para alinear las tarjetas en la misma línea -->
+<div class="flex justify-between space-x-4 w-full">
+
+  <!-- Tarjeta Consumo -->
+  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4">
+    <div class="flex items-center justify-center h-12 w-12 bg-blue-100 rounded-full">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
+        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
+      </svg>
+    </div>
+    <p class="text-xs">Consumo</p>
+  </div>
+
+  <!-- Tarjeta Amperaje -->
+  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4">
+    <div class="flex items-center justify-center h-12 w-12 bg-blue-100 rounded-full">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
+        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
+      </svg>
+    </div>
+    <p class="text-xs">Amperaje</p>
+  </div>
+
+  <!-- Tarjeta Potencia -->
+  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4">
+    <div class="flex items-center justify-center h-12 w-12 bg-blue-100 rounded-full">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
+        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
+      </svg>
+    </div>
+    <p class="text-xs">Potencia</p>
+  </div>
+
+  <!-- Tarjeta Frecuencia -->
+  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4">
+    <div class="flex items-center justify-center h-12 w-12 bg-blue-100 rounded-full">
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
+        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
+      </svg>
+    </div>
+    <p class="text-xs">Frecuencia</p>
+  </div>
+
+</div>
+
+
+
 <div class="flex justify-center mt-4">
   <div class="flex space-x-4">
     <button
