--- a/frontend/src/app/routes/reportes/reportes.component.html
+++ b/frontend/src/app/routes/reportes/reportes.component.html
@@ -1,224 +1,82 @@
-<!-- Contenedor padre para alinear las tarjetas en la misma línea -->
 <div class="flex justify-between space-x-4 w-full">
-
-  <!-- Tarjeta Consumo -->
-  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4">
+  <div
+    (click)="setSelectedType('Consumo')"
+    class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4 cursor-pointer"
+    [ngClass]="{'bg-blue-200': selectedType === 'Consumo'}">
     <div class="flex items-center justify-center h-12 w-12 bg-blue-100 rounded-full">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
-        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
-      </svg>
+
     </div>
     <p class="text-xs">Consumo</p>
   </div>
 
-  <!-- Tarjeta Amperaje -->
-  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4">
+  <div
+    (click)="setSelectedType('Amperaje')"
+    class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4 cursor-pointer"
+    [ngClass]="{'bg-blue-200': selectedType === 'Amperaje'}">
     <div class="flex items-center justify-center h-12 w-12 bg-blue-100 rounded-full">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
-        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
-      </svg>
+
     </div>
     <p class="text-xs">Amperaje</p>
   </div>
 
-  <!-- Tarjeta Potencia -->
-  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4">
+  <div
+    (click)="setSelectedType('Potencia')"
+    class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4 cursor-pointer"
+    [ngClass]="{'bg-blue-200': selectedType === 'Potencia'}">
     <div class="flex items-center justify-center h-12 w-12 bg-blue-100 rounded-full">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
-        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
-      </svg>
+
     </div>
     <p class="text-xs">Potencia</p>
   </div>
 
-  <!-- Tarjeta Frecuencia -->
-  <div class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4">
+  <div
+    (click)="setSelectedType('Frecuencia')"
+    class="bg-white p-4 rounded-lg shadow-lg flex items-center space-x-2 w-1/4 cursor-pointer"
+    [ngClass]="{'bg-blue-200': selectedType === 'Frecuencia'}">
     <div class="flex items-center justify-center h-12 w-12 bg-blue-100 rounded-full">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="size-4">
-        <path fill-rule="evenodd" d="M14.615 1.595a.75.75 0 0 1 .359.852L12.982 9.75h7.268a.75.75 0 0 1 .548 1.262l-10.5 11.25a.75.75 0 0 1-1.272-.71l1.992-7.302H3.75a.75.75 0 0 1-.548-1.262l10.5-11.25a.75.75 0 0 1 .913-.143Z" clip-rule="evenodd" />
-      </svg>
+
     </div>
     <p class="text-xs">Frecuencia</p>
   </div>
-
 </div>
-
-
-
-<div class="flex justify-center mt-4">
-  <div class="flex space-x-4">
-    <button
-      (click)="toggleSelection('consumo')"
-      [class.bg-blue-500]="isConsumoSelected"
-      [class.text-white]="isConsumoSelected"
-      class="px-4 py-2 border rounded-lg transition duration-200 ease-in-out hover:bg-blue-200"
-    >
-      <i class="fa-solid fa-bolt"></i> Consumo
-    </button>
-
-    <button
-      (click)="toggleSelection('amperaje')"
-      [class.bg-blue-500]="isAmperajeSelected"
-      [class.text-white]="isAmperajeSelected"
-      class="px-4 py-2 border rounded-lg transition duration-200 ease-in-out hover:bg-blue-200"
-    >
-      <i class="fas fa-gauge-high"></i> Intensidad de Amperaje
-    </button>
-
-    <button
-      (click)="toggleSelection('potencia')"
-      [class.bg-blue-500]="isPotenciaSelected"
-      [class.text-white]="isPotenciaSelected"
-      class="px-4 py-2 border rounded-lg transition duration-200 ease-in-out hover:bg-blue-200"
-    >
-      <i class="fas fa-plug"></i> Potencia
-    </button>
-
-    <button
-      (click)="toggleSelection('frecuencia')"
-      [class.bg-blue-500]="isFrecuenciaSelected"
-      [class.text-white]="isFrecuenciaSelected"
-      class="px-4 py-2 border rounded-lg transition duration-200 ease-in-out hover:bg-blue-200"
-    >
-      <i class="fas fa-wave-square"></i> Frecuencia
-    </button>
-  </div>
-</div>
-
-
 
 <div class="flex items-start justify-between py-6 px-10">
   <div class="flex w-full">
     <div>
       <h2 class="text-xl font-bold mb-2">Selecciona el rango de fechas</h2>
 
-      <mat-form-field appearance="fill" class="w-full mb-4">
-        <mat-label>Fecha de Inicio</mat-label>
-        <input matInput [matDatepicker]="startPicker" [(ngModel)]="startDate" (dateChange)="onDateChange()" />
-        <mat-datepicker-toggle matSuffix [for]="startPicker"></mat-datepicker-toggle>
-        <mat-datepicker #startPicker></mat-datepicker>
-      </mat-form-field>
+      <p class="mb-4 text-gray-600">
+        Por favor, selecciona un tipo de gráfico y un rango de fechas antes de hacer clic en "Buscar".
+      </p>
 
-      <mat-form-field appearance="fill" class="w-full">
-        <mat-label>Fecha de Fin</mat-label>
-        <input matInput [matDatepicker]="endPicker" [(ngModel)]="endDate" (dateChange)="onDateChange()" />
-        <mat-datepicker-toggle matSuffix [for]="endPicker"></mat-datepicker-toggle>
-        <mat-datepicker #endPicker></mat-datepicker>
-      </mat-form-field>
 
-      <div *ngIf="dateError" class="text-red-500 mt-2">
-        {{ dateError }}
+      <div class="mb-6">
+        <label class="block text-gray-700">Filtrar por Fecha</label>
+        <div class="flex space-x-4">
+          <input [(ngModel)]="startDate" type="date" class="border border-gray-300 p-2 rounded" [disabled]="!selectedType">
+          <input [(ngModel)]="endDate" type="date" class="border border-gray-300 p-2 rounded" [disabled]="!selectedType">
+          <button
+            (click)="generateGraficoUrl()"
+            class="bg-primary text-white p-2 rounded hover:bg-primaryhover"
+            >Buscar</button>
+        </div>
       </div>
-    </div>
 
-    <div class="w-3/4 p-2">
-      <h2 class="text-xl font-bold mb-2">Gráfico</h2>
-      <div class="border rounded-lg h-64 flex items-center justify-center">
-        <iframe
-          [src]="graficoUrl | safeUrl"
-          width="600"
-          height="400"
-          frameborder="0">
-        </iframe>
+      <p *ngIf="errorMessage" class="text-red-500 mb-4">{{ errorMessage }}</p>
+
+      <div class="w-3/4 p-2">
+        <h2 class="text-xl font-bold mb-2">Gráfico: {{ selectedType }}</h2>
+        <div class="border rounded-lg h-64 flex items-center justify-center">
+          <iframe
+            *ngIf="graficoUrl"
+            [src]="graficoUrl"
+            width="600"
+            height="400"
+            frameborder="0">
+          </iframe>
+          <p *ngIf="!graficoUrl">Selecciona un tipo de gráfico y un rango de fechas para visualizarlo.</p>
+        </div>
       </div>
     </div>
   </div>
 </div>
-
-
-
-
-<!--
-<div class="flex h-screen">
-
-
-  <!- Main Content ->
-  <section class="flex-1 text-gray-600 body-font">
-    <div class="container px-5 py-24 mx-auto">
-      <!- Heading ->
-      <div class="flex flex-wrap w-full mb-20 flex-col items-center text-center">
-        <h1 class="text-4xl font-bold leading-tight text-gray-900">Reportes Generales</h1>
-      </div>
-
-      <!- Report Cards ->
-      <div class="flex flex-wrap -m-4">
-        <!- Report Card 1 ->
-        <div class="xl:w-1/3 md:w-1/2 p-4">
-          <div class="border border-gray-300 p-6 rounded-lg">
-            <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-primary-light text-primary mb-4">
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                <path d="M22 12h-4l-3 9L9 3l-3 9H2"></path>
-              </svg>
-            </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Consumos</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waist co, subway tile poke farm.</p>
-          </div>
-        </div>
-        <!- Report Card 2 ->
-        <div class="xl:w-1/3 md:w-1/2 p-4">
-          <div class="border border-gray-300 p-6 rounded-lg">
-            <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-primary-light text-primary mb-4">
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                <circle cx="6" cy="6" r="3"></circle>
-                <circle cx="6" cy="18" r="3"></circle>
-                <path d="M20 4L8.12 15.88M14.47 14.48L20 20M8.12 8.12L12 12"></path>
-              </svg>
-            </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Sobrecargas</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waist co, subway tile poke farm.</p>
-          </div>
-        </div>
-        <!- Report Card 3 ->
-        <div class="xl:w-1/3 md:w-1/2 p-4">
-          <div class="border border-gray-300 p-6 rounded-lg">
-            <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-primary-light text-primary mb-4">
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                <path d="M20 21v-2a4 4 0 00-4-4H8a4 4 0 00-4 4v2"></path>
-                <circle cx="12" cy="7" r="4"></circle>
-              </svg>
-            </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Report Card Title</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waist co, subway tile poke farm.</p>
-          </div>
-        </div>
-        <!- Report Card 4 ->
-        <div class="xl:w-1/3 md:w-1/2 p-4">
-          <div class="border border-gray-300 p-6 rounded-lg">
-            <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-primary-light text-primary mb-4">
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                <path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1zM4 22v-7"></path>
-              </svg>
-            </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Melanchole</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waist co, subway tile poke farm.</p>
-          </div>
-        </div>
-        <!- Report Card 5 ->
-        <div class="xl:w-1/3 md:w-1/2 p-4">
-          <div class="border border-gray-300 p-6 rounded-lg">
-            <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-primary-light text-primary mb-4">
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path>
-              </svg>
-            </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Bunker</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waist co, subway tile poke farm.</p>
-          </div>
-        </div>
-        <!- Report Card 6 ->
-        <div class="xl:w-1/3 md:w-1/2 p-4">
-          <div class="border border-gray-300 p-6 rounded-lg">
-            <div class="w-10 h-10 inline-flex items-center justify-center rounded-full bg-primary-light text-primary mb-4">
-              <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-6 h-6" viewBox="0 0 24 24">
-                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
-              </svg>
-            </div>
-            <h2 class="text-lg text-gray-900 font-medium title-font mb-2">Ramona Falls</h2>
-            <p class="leading-relaxed text-base">Fingerstache flexitarian street art 8-bit waist co, subway tile poke farm.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-</div>
--->
