--- a/frontend/src/app/routes/home/home.component.html
+++ b/frontend/src/app/routes/home/home.component.html
@@ -18,6 +18,7 @@
 
     <main class="flex-grow bg-gray-100 pt-2 transition-all duration-300">
       <router-outlet></router-outlet>
+      <app-alert></app-alert>
     </main>
   </div>
 </div>
