se agrego el html de setting similar al figma

--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -24,7 +24,7 @@
   <div>
     <ul class="menu menu-sm  rounded-box z-[1] p-2 shadow">
       <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Mi suscripción</a></li>
-      <li class="p-1"><a href="configuracion" class="block p-2 rounded hover:bg-gray-300 transition">Configuraciones</a></li>
+      <li class="p-1"><a [routerLink]="['configuracion']" class="block p-2 rounded hover:bg-gray-300 transition">Configuraciones</a></li>
       <li class="p-1"><a href="" class="block p-2 rounded hover:bg-gray-300 transition">Desloguearse</a></li>
     </ul>
   </div>
