--- a/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
+++ b/frontend/src/app/routes/dashboard/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="container mx-auto py-1">
   <div class="grid grid-cols-2 md:grid-cols-4 gap-6 px-3">
-    <app-card-info></app-card-info>
-    <app-card-info></app-card-info>
-    <app-card-info></app-card-info>
+    <app-card-info id="step1"></app-card-info>
+    <app-card-info id="step2"></app-card-info>
+    <app-card-info id="step3"></app-card-info>
     <app-card-info></app-card-info>
   </div>
 </div>
