--- a/frontend/src/app/core/sidebar/sidebar.component.html
+++ b/frontend/src/app/core/sidebar/sidebar.component.html
@@ -74,6 +74,12 @@
           <span *ngIf="isSidebarOpen" class="ml-2 text-base">Configuracion</span>
         </a>
       </li>
+      <li class="p-1">
+        <a [routerLink]="['configuracion']" class="block p-2 rounded hover:bg-gray-300 transition" title="Desloguearse">
+          <i class="inline-block w-5 h-5 p-1 fa-lg fa-solid fa-right-from-bracket"></i>
+          <span *ngIf="isSidebarOpen" class="ml-2 text-base">Desloguearse</span>
+        </a>
+      </li>
     </ul>
   </div>
 </aside>
